Issue #45: Austin - Add spacing to bottom of page

--- a/src/UI/app/views/DeckPreview/DeckPreview.css
+++ b/src/UI/app/views/DeckPreview/DeckPreview.css
@@ -48,3 +48,7 @@ md-card {
   margin-bottom: 0;
   margin-top: 1.5em;
 }
+
+.card-container {
+  padding-bottom: 1.5em;
+}
